--- a/index.html
+++ b/index.html
@@ -15,10 +15,26 @@
         font-size: 45px;
         text-align: center;
     }
+    .text3 {
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
    </style>
    <body class="flex-container">
     <h1 class="text text2">
         Iterative Design
     </h1>
+    <div>
+        <p class="text text3">
+            Our group made an mobile phone app interface for the startup
+            <a href="https://www.ycombinator.com/companies/nftscoring">NFTScoring </a>, 
+            which is an NFT buying and selling platform. We think that this interface 
+            will affect anybody who is interested in owning NFTs or people trying
+            to learn more about NFTs in general. These people will be effected because
+            our app is designed to be a user-friendly, and welcoming platform designed
+            for people with little to no experience with NFTs to those that know them 
+            in and out.
+    </div>
    </body>
 </html>
