--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <style>
-    .flex-container {
-        background-color: black;
+    .flex-container1 {
+        background-color: rgb(151, 86, 151);
+    }
+    .flex-container2 {
+        align-items: center;
+        flex-direction: column;
     }
     .text {
         color: white
@@ -20,12 +24,18 @@
         text-align: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
+    .text4 {
+        font-size: 30px;
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
    </style>
-   <body class="flex-container">
+   <body class="flex-container1">
     <h1 class="text text2">
         Iterative Design
     </h1>
     <div>
+        <h2 class="text text4">Intro</h2>
         <p class="text text3">
             Our group made an mobile phone app interface for the startup
             <a href="https://www.ycombinator.com/companies/nftscoring">NFTScoring </a>, 
@@ -35,6 +45,34 @@
             our app is designed to be a user-friendly, and welcoming platform designed
             for people with little to no experience with NFTs to those that know them 
             in and out.
+    </div>
+    <div>
+        <h3 class="text text4">Sketches and First Wireframe</h3>
+        
+    </div>
+    <div>
+        <h4 class="text text4">Figma Prototypes</h4>
+        <p class="text text3">
+            Our prototype that we presented during studio can be found 
+            <a href="https://www.figma.com/proto/qtbnnWu0BklHWqwxkSFZT2/NFTScoring?page-id=0%3A1&node-id=1%3A2&viewport=-607%2C-266%2C0.4&scaling=scale-down&starting-point-node-id=1%3A2">here.</a>
+            Overall, feedback was mostly positive with the main suggestions being differentiate 
+            the buy and sell pages, add an "add favorites" function, give users more flexibility to 
+            edit their profile, and our overall dark mode was hard to read. 
+        </p>
+    </div>
+    <div>
+        <h5 class="text text4">User Testing</h5>
+        <p class="text text3">
+            The task we gave during our user testing was as follows:
+        </p>
+        <div class="flex-container2">
+            <p class="text text3">
+                1. Buy an NFT from the Space Riders collection<br>
+                2. View your own NFT collection<br>
+                3. Add the Space Riders NFT collection to your favorites<br>
+            </p>
+        </div>
+        
     </div>
    </body>
 </html>
