--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         text-align: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
+    .text5 {
+        font-size: 20px;
+        text-align: left;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
    </style>
    <body class="flex-container1">
     <h1 class="text text2">
@@ -57,22 +62,25 @@
             <a href="https://www.figma.com/proto/qtbnnWu0BklHWqwxkSFZT2/NFTScoring?page-id=0%3A1&node-id=1%3A2&viewport=-607%2C-266%2C0.4&scaling=scale-down&starting-point-node-id=1%3A2">here.</a>
             Overall, feedback was mostly positive with the main suggestions being differentiate 
             the buy and sell pages, add an "add favorites" function, give users more flexibility to 
-            edit their profile, and our overall dark mode was hard to read. 
+            edit their profile, and our overall dark mode was hard to read. With this feedback, we 
+            redesigned the interface with more attractive colors to drown out the black background.
+            On top of this we added an option to favorite a particular NFT, and gave users a better
+            experience when viewing their own profile. The finished result can be found 
+            <a href="https://www.figma.com/proto/mSpEmaxZUe7NPo0kvmrSTv/Final-Iterative-User-Testing?page-id=0%3A1&node-id=1%3A253&viewport=207%2C1792%2C0.82&scaling=contain&starting-point-node-id=1%3A279">here.</a>
         </p>
     </div>
-    <div>
-        <h5 class="text text4">User Testing</h5>
-        <p class="text text3">
-            The task we gave during our user testing was as follows:
-        </p>
-        <div class="flex-container2">
+        <div>
+            <h5 class="text text4">User Testing</h5>
             <p class="text text3">
-                1. Buy an NFT from the Space Riders collection<br>
-                2. View your own NFT collection<br>
-                3. Add the Space Riders NFT collection to your favorites<br>
+                The task we gave during our user testing was as follows:
+            </p>
+            <div class="flex-container2">
+                <p class="text text3">
+                    1. Buy an NFT from the Space Riders collection<br>
+                    2. View your own NFT collection<br>
+                    3. Add the Space Riders NFT collection to your favorites<br>
             </p>
         </div>
-        
     </div>
    </body>
 </html>
